fixed header to top of page and news headers to tops of sections and added center spacing column

--- a/grid.css
+++ b/grid.css
@@ -34,9 +34,11 @@
     clear: both;
 }
 
+.col-1-no-mobile .col-2,
 .col-3,
 .col-4,
 .col-5,
+.col-5-plus,
 .col-6,
 .col-7,
 .col-8,
@@ -55,9 +57,11 @@
 
 /* Mobile defaults */
 
+.col-1-no-mobile .col-2,
 .col-3,
 .col-4,
 .col-5,
+.col-5-plus,
 .col-6,
 .col-7,
 .col-8,
@@ -65,10 +69,21 @@
     width: 100%;
 }
 
+.col-1-no-mobile {
+    display: none;
+}
+
 
 /* Non-mobile, grid */
 
 @media only screen and (min-width: 640px) {
+    .col-1-no-mobile {
+        display: inline-block;
+        width: 8.33%;
+    }
+    .col-2 {
+        width: 16.66%;
+    }
     /* 3 columns, 3/12 in % */
     .col-3 {
         width: 25%;
@@ -83,7 +98,11 @@
     .col-5 {
         width: 41.67%;
     }
-
+    /* 5.5 columns */
+    .col-5-plus {
+        display: inline-block;
+        width: 45.83%;
+    }
     /* 6 columns */
     .col-6 {
         width: 50%;
