--- a/style.css
+++ b/style.css
@@ -6,10 +6,21 @@ font-family: 'Raleway', sans-serif;
 */
 
 body {
-    margin: 0 2%;
+    margin: 120px 2%;
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
+    line-height: 1.5;
+}
+
+header {
+    height: 120px;
+    position: fixed;
+    background-color: bisque;
+    width: 100%;
+    margin: 0;
+    left: 0;
+    top: 0;
 }
 
 h1 {
@@ -19,8 +30,12 @@ h1 {
     font-weight: 700;
 }
 
-body + img {
+#logo {
     max-width: 200px;
+    position: fixed;
+    top: 10px;
+    opacity: .7;
+    z-index: 2;
 }
 
 #temperature {
@@ -70,12 +85,41 @@ div {
     width: 45%;
 */
     background-color: yellow;
-    max-height: 1000px;
+    height: 1000px;
     overflow: scroll;
 }
 
+.middleBuffer {
+    background-color: black;
+    height: 1000px;
+}
+
+.separator {
+    height: 25px;
+}
+
+
+
+.newsHeader {
+    position: absolute;
+    padding: 0px 20px;
+    /*    width: 100%;*/
+    background-color: aqua;
+}
+
+.newsHeader::after {
+    margin: 100px;
+}
+
+/*
+.scrollBox {
+    max-height: 300px;
+}
+*/
+
 .weather,
 .events,
+.Events,
 .holidays {
     /*
     float: right;
